--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
 title: Gonçalo Lourenço
-author: Gonçalo Lourenço
+author: cnogola
 email: cnogola@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Learn about my previous work experience as a software test consultant
