--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ header_pages:
   - about.md
   - blog/index.html
 show_excerpts: true
-permalink: /:year/:month/:title/
+permalink: /blog/:year/:month/:title/
 # Pagination Settings
 pagination:
   enabled: true
