--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ permalink: /blog/:year/:month/:title/
 pagination:
   enabled: true
   per_page: 3
-  permalink: '/page/:num/'
+  permalink: '/blog/:num/'
 #  title: ':title - page :num of :max'
   limit: 0
   sort_field: 'date'
