--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ header_pages:
   - about.md
   - blog/index.html
   - cv/index.html
+  - contacts/index.html
 show_excerpts: true
 permalink: /blog/:year/:month/:title/
 
@@ -48,7 +49,7 @@ pagination:
   limit: 0
   sort_field: 'date'
   sort_reverse: true
-  
+
 # Google Analytics
 google_analytics: UA-118012353-1
 
